# realsense_ws

./: .gitignore  CMakeLists.txt  package.xml
camerasetup/: E10S50.sh  E1S50.sh  E2S50.sh  E4S50.sh  E6S50.sh  E8S50.sh
launch/: Aruco_sim.launch  CV_realtime.launch  CV_sim.launch  FSM.launch  Jeremy.launch  Jeremy_carsim.launch  Yolo_sim.launch  yolo_sim.launch
logs/: Aruco_raw.csv  CSVtoMAT.m  FSM1.csv  FSM2.csv  FSM3.csv  FSM4.csv  FSM5.csv  FSMCSVtoMAT.m  Groundtruth.csv  KF.csv  Yolo_raw.csv
logs/1019/: Aruco_raw.csv  CSVtoMAT.m
logs/1020 GT/1/: Aruco_raw.csv  FSM.csv  Groundtruth.csv  KF.csv  Yolo_raw.csv
logs/1020 GT/2/: Aruco_raw.csv  FSM.csv  Groundtruth.csv  KF.csv  Yolo_raw.csv
logs/1020 GT/Fly test/: Aruco_raw.csv  FSM.csv  Groundtruth.csv  KF.csv  Yolo_raw.csv
logs/1020 GT/Flytest 4P1/: Aruco_raw.csv  FSM.csv  Groundtruth.csv  KF.csv  Yolo_raw.csv
logs/4+1 no hole plate/traj/: FSM1.csv
logs/4+1 no hole plate/vertical/: FSM1.csv  FSM2.csv
rviz/: CV_sim.rviz  aruco_est.rviz  test.rviz
script_backup/: E1S100.sh  camera.sh  gh034_led.launch  gh034_small.launch  play_bag.launch  px4_sitl.launch  record_bag.sh  rosclient.sh  scout_init.sh  scout_start_all.sh  ssh_up.sh  vrpn.launch
src/: 1003 for 1004 test AM_trj.rar  Aruco.cpp  CV.cpp  CV_yolo.cpp  CVyolo(original).cpp  CVyolo.cpp  FSM.cpp  Failsafe.cpp  KalmanFilter.cpp  TargetPredictor.cpp  Yolo.cpp  aruco.cpp  camera.cpp  client.py  main.cpp  test.cpp  test.cpp.autosave  test.h  workspace.code-workspace
src/fsm/: fsm.cpp  fsm.h
src/utils/: client.h  common.h  cv.h  cv.hpp  kinetic_math.h  mission.h  run_yolo.cpp  run_yolo.hpp  trajectories.h  trajectories.hpp  uav_mission.hpp
